--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,22 +22,7 @@ jobs:
       run: npm ci
       
     - name: Run jest tests
-      run: npm test -- --verbose --ci --json --outputFile=test-report.json
-      
-    - name: Upload test results
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results
-        path: test-report.json
-        
-    - name: Report Test Results
-      if: always()
-      uses: dorny/test-reporter@v1
-      with:
-        name: Jest Tests
-        path: test-report.json
-        reporter: jest-json
+      run: npm test
 
     - name: Run prettier
       run: npm run clean
