--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     
@@ -24,5 +23,8 @@ jobs:
     - name: Run jest tests
       run: npm test
 
-    - name: Run prettier
+  prettier:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Run Prettier
       run: npm run clean
