--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,11 @@ jobs:
   prettier:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4
+    
+    - name: Use Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20.x'  
     - name: Run Prettier
       run: npm run clean
