--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,10 +27,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '20.x'  
+
+    - name: Install dependencies
+      run: npm ci
+
     - name: Run Prettier
       run: npm run clean
