--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start",
     "lint": "eslint",
     "clean": "prettier --write .",
-    "test" : "jest"
+    "test": "jest"
   },
   "dependencies": {
+    "netlify-cli": "^23.9.1",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
