--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,3 +58,7 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+      - name: Deploy to Netlify
+        run: npx netlify-cli deploy --site 9624e242-ea23-44dc-9f62-e37017f405ee --auth nfp_wETampMUDGBpRcqpMnEiYTSTH94L1dEy571f
+ --prod
