--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,5 +60,4 @@ jobs:
         run: npm run build
 
       - name: Deploy to Netlify
-        run: npx netlify-cli deploy --site 9624e242-ea23-44dc-9f62-e37017f405ee --auth nfp_wETampMUDGBpRcqpMnEiYTSTH94L1dEy571f
- --prod
+        run: npx netlify-cli deploy --ID 9624e242-ea23-44dc-9f62-e37017f405ee --TOKEN nfp_wETampMUDGBpRcqpMnEiYTSTH94L1dEy571f--prod
