--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,4 +60,7 @@ jobs:
         run: npm run build
 
       - name: Deploy to Netlify
-        run: npx netlify-cli deploy --ID 9624e242-ea23-44dc-9f62-e37017f405ee --TOKEN nfp_wETampMUDGBpRcqpMnEiYTSTH94L1dEy571f--prod
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        run: npx netlify-cli deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN --prod
