--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,4 @@ jobs:
         run: npm run build
 
       - name: Deploy to Netlify
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.ID }}
-        run: npx netlify-cli deploy --site $ID --auth $TOKEN --prod
+        run: npx netlify-cli deploy --site ${{ secrets.NETLIFY_SITE_ID }} --auth  ${{ secrets.NETLIFY_AUTH_TOKEN }} --prod
