--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
     needs: [test, prettier]
     if: github.ref == 'refs/heads/main'
     strategy:
-      fail-fast: true
+      fail-fast: true #if a job fails, the rest are cancelled
     steps:
       - uses: actions/checkout@v4
 
@@ -59,5 +59,5 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Deploy to Netlify
+      - name: Deploy to Netlify #this deploys to Netlify
         run: npx netlify-cli deploy --site ${{ secrets.NETLIFY_SITE_ID }} --auth  ${{ secrets.NETLIFY_AUTH_TOKEN }} --prod
