--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,22 +7,21 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  jest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
-          
+          node-version: '20.x'  
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Run jest tests
         run: npm test
-
   prettier:
     runs-on: ubuntu-latest
     steps:
