--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [test, prettier]
+    needs: [jest, prettier]
     if: github.ref == 'refs/heads/main'
     strategy:
       fail-fast: true #if a job fails, the rest are cancelled
