--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,21 @@ on:
     branches: [ main ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'  
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run ESLint
+        run: npm run lint
   jest:
     runs-on: ubuntu-latest
     steps:
@@ -40,7 +55,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [jest, prettier]
+    needs: [jest, prettier]  #only runs if the branch is main
     if: github.ref == 'refs/heads/main'
     strategy:
       fail-fast: true #if a job fails, the rest are cancelled
